# example_fastapi_app

./: .gitignore  Dockerfile  README.md  locustfile.py  main.py  pyproject.toml  tests.py
.github/scripts/: alert_on_slack.py  validate_commits.py
.github/workflows/: main.yml  validate.yml
manifests/: Chart.yaml  values.yaml
manifests/templates/: deployment.yaml  ingress.yaml  service.yaml
